--- a/grandioso/discount.html
+++ b/grandioso/discount.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brands</title>
+    <title>Discount</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -158,99 +158,228 @@
         <div class="heading__top ">
             <div class="container ">
                 <div class="heading__topInner ">
-                    <h1 class="h5 text-center ">Бренды</h1>
+                    <h1 class="h5 text-center ">Акции</h1>
                 </div>
             </div>
         </div>
     </section>
-    <div class="pageBrands">
+    <div class="pageDiscount">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
-                    <div class="pageBrands__selectWrap">
-                        <select class="select pageBrands__select">
-                            <option value="hide">Страна:</option>
-                            <option>Англия</option>
-                            <option>Италия</option>
-                            <option>Испания</option>
-                            <option>Россия</option>
-                        </select>
+            <div class="pageDiscount__slider">
+                <div class="pageDiscount__itemWrap">
+                    <div class="pageDiscount__item">
+                        <div class="pageDiscount__textWrap">
+                            <h3 class="pageDiscount__title">Новая коллекция: Leonie</h3>
+                            <p class="pageDiscount__text">Механизм трансформации дельфин используется преимущественно в угловых конфигурациях диванов, которые благодаря нему преобразуются в просторную кровать с достаточно ровным и широким спальным местом.</p>
+                            <div class=""><a href="" class="btn2 pageDiscount__link">Подробнее</a></div>
+                        </div>
+                        <div class="pageDiscount__imgWrap">
+                            <img src="./img/d1.jpg" alt="" class="pageDiscount__img">
+                        </div>
                     </div>
-
-
-
                 </div>
+                <div class="pageDiscount__itemWrap">
+                    <div class="pageDiscount__item">
+                        <div class="pageDiscount__textWrap">
+                            <h3 class="pageDiscount__title">Новая коллекция: Leonie</h3>
+                            <p class="pageDiscount__text">Механизм трансформации дельфин используется преимущественно в угловых конфигурациях диванов, которые благодаря нему преобразуются в просторную кровать с достаточно ровным и широким спальным местом.</p>
+                            <div class=""><a href="" class="btn2 pageDiscount__link">Подробнее</a></div>
+                        </div>
+                        <div class="pageDiscount__imgWrap">
+                            <img src="./img/d1.jpg" alt="" class="pageDiscount__img">
+                        </div>
+                    </div>
+                </div>
+                <div class="pageDiscount__itemWrap">
+                    <div class="pageDiscount__item">
+                        <div class="pageDiscount__textWrap">
+                            <h3 class="pageDiscount__title">Новая коллекция: Leonie</h3>
+                            <p class="pageDiscount__text">Механизм трансформации дельфин используется преимущественно в угловых конфигурациях диванов, которые благодаря нему преобразуются в просторную кровать с достаточно ровным и широким спальным местом.</p>
+                            <div class=""><a href="" class="btn2 pageDiscount__link">Подробнее</a></div>
+                        </div>
+                        <div class="pageDiscount__imgWrap">
+                            <img src="./img/d1.jpg" alt="" class="pageDiscount__img">
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
+    </div>
+    <div class="filter">
         <div class="container">
-            <div class="pageBrands__wrap">
-                <div class="pageBrands__item">
-                    <div class="row">
-                        <div class="col-xs-2 col-md-offset-2">
-                            <p class="pageBrands__letter h1">A</p>
+            <div class="filter__inner">
+                <p class="h4">фильтры</p>
+                <p class="h4">Найдено 248 товаров</p>
+            </div>
+        </div>
+    </div>
+    <div class="products">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
                         </div>
-                        <div class="col-md-6 col-md-offset-1 col-sm-10 col-sm-offset-0 col-xs-9 col-xs-offset-1">
-                            <ul class="pageBrands__list">
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                            </ul>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
                         </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
                     </div>
                 </div>
-                <div class="pageBrands__item">
-                    <div class="row">
-                        <div class="col-xs-2 col-md-offset-2">
-                            <p class="pageBrands__letter h1">B</p>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
                         </div>
-                        <div class="col-md-6 col-md-offset-1 col-sm-10 col-sm-offset-0 col-xs-9 col-xs-offset-1">
-                            <ul class="pageBrands__list">
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
 
-                            </ul>
                         </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
                     </div>
                 </div>
-                <div class="pageBrands__item">
-                    <div class="row">
-                        <div class="col-xs-2 col-md-offset-2">
-                            <p class="pageBrands__letter h1">C</p>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
                         </div>
-                        <div class="col-md-6 col-md-offset-1 col-sm-10 col-sm-offset-0 col-xs-9 col-xs-offset-1">
-                            <ul class="pageBrands__list">
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                            </ul>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
                         </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
                     </div>
                 </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 
-    </section>
 
     <!-- Footer -->
     <div class="formSubscription ">
@@ -378,8 +507,21 @@
             <a href=" " class="p1 avaLink ">Сайт создан в AVA</a>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js " integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin=" anonymous "></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/main.js "></script>
+    <script>
+        $('.pageDiscount__slider').slick({
+            autoplay: false,
+            slidesToShow: 1,
+            // centerMode: true,
+            // centerPadding: '60px',
+            arrows: false,
+            dots: true,
+            dotsClass: "sliderDots pageCase__galeryDots"
+        });
+    </script>
 </body>
 
 </html>
