--- a/grandioso/manufacturer.html
+++ b/grandioso/manufacturer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brands</title>
+    <title>Manufacturer</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -158,99 +158,199 @@
         <div class="heading__top ">
             <div class="container ">
                 <div class="heading__topInner ">
-                    <h1 class="h5 text-center ">Бренды</h1>
+                    <h1 class="h5 text-center ">Alevi</h1>
+                    <p class="p1 text-center">Италия</p>
                 </div>
             </div>
         </div>
     </section>
-    <div class="pageBrands">
+    <div class="pageManufacturer">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
-                    <div class="pageBrands__selectWrap">
-                        <select class="select pageBrands__select">
-                            <option value="hide">Страна:</option>
-                            <option>Англия</option>
-                            <option>Италия</option>
-                            <option>Испания</option>
-                            <option>Россия</option>
-                        </select>
-                    </div>
-
-
-
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="pageBrands__wrap">
-                <div class="pageBrands__item">
-                    <div class="row">
-                        <div class="col-xs-2 col-md-offset-2">
-                            <p class="pageBrands__letter h1">A</p>
-                        </div>
-                        <div class="col-md-6 col-md-offset-1 col-sm-10 col-sm-offset-0 col-xs-9 col-xs-offset-1">
-                            <ul class="pageBrands__list">
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="pageBrands__item">
-                    <div class="row">
-                        <div class="col-xs-2 col-md-offset-2">
-                            <p class="pageBrands__letter h1">B</p>
-                        </div>
-                        <div class="col-md-6 col-md-offset-1 col-sm-10 col-sm-offset-0 col-xs-9 col-xs-offset-1">
-                            <ul class="pageBrands__list">
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="pageBrands__item">
-                    <div class="row">
-                        <div class="col-xs-2 col-md-offset-2">
-                            <p class="pageBrands__letter h1">C</p>
-                        </div>
-                        <div class="col-md-6 col-md-offset-1 col-sm-10 col-sm-offset-0 col-xs-9 col-xs-offset-1">
-                            <ul class="pageBrands__list">
-                                <li class="p1 pageBrands__brand" data-country="Англия">Alevì</li>
-                                <li class="p1 pageBrands__brand" data-country="Италия">Alex</li>
-                                <li class="p1 pageBrands__brand" data-country="Англия">Mill</li>
-                                <li class="p1 pageBrands__brand" data-country="Россия">Alex</li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+                    <h3 class="h1">О производителе</h3>
+                    <p class="p1">Атмосфера Alivar - это изысканный стиль, совершенная работа, выполненная разнообразными материалами, с присущим каждому из них качеству. Коллекции фабрики ультрасовременны и являют собой нечто большее, чем просто мода. Они представляют
+                        особый способ интерпретации интерьерных решений. Дерево, мрамор, камни, металлы, кожа, разнообразные ткани создают великолепие коллекций Alivar. Дерево в конструкциях изделий фабрики тщательно выбирается из основных традиционных
+                        и самых оригинальных видов, что обусловлено особой страстью компании к этому материалу, вдохновляющему дизайнеров на все новые и новые свершения. Древесина используется в экологически чистом виде. </p>
+                    <p>Коллекции бренда разделяются на две модельные линии: уютной домашней и роскошной современной мебели. «Home Project» от Alivar - образец превосходного дизайна и элегантной утонченности, разработанной итальянским архитектором Джузеппе
+                        Бавузо. Это стильная, необычная атмосфера нестареющего вкуса и качества «Made In Italy».</p>
                 </div>
             </div>
         </div>
     </div>
+    <div class="filter">
+        <div class="container">
+            <div class="filter__inner">
+                <p class="h4">фильтры</p>
+                <p class="h4">Найдено 248 товаров</p>
+            </div>
+        </div>
+    </div>
+    <div class="products">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
 
-    </section>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi1.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="cartProduct">
+                        <div class="cartProduct__tags">
+                            <div class="cartProduct__tag">New</div>
+                        </div>
+                        <div class="cartProduct__imgWrap">
+                            <img src="./img/product/pi2.jpg" alt="" class="cartProduct__img">
+                        </div>
+                        <span class="cartProduct__collection btn1">Arketipo</span>
+                        <a href="" class="cartProduct__title h3">Gaff Metal Frame Chair Brown</a>
+                        <p class="cartProduct__cost h4">39 800 ₽</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 
     <!-- Footer -->
     <div class="formSubscription ">
@@ -378,8 +478,21 @@
             <a href=" " class="p1 avaLink ">Сайт создан в AVA</a>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js " integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin=" anonymous "></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/main.js "></script>
+    <script>
+        $('.pageDiscount__slider').slick({
+            autoplay: false,
+            slidesToShow: 1,
+            // centerMode: true,
+            // centerPadding: '60px',
+            arrows: false,
+            dots: true,
+            dotsClass: "sliderDots pageCase__galeryDots"
+        });
+    </script>
 </body>
 
 </html>
